<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/rob_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_action_bar_subtitle_text_size"
            android:background="@drawable/square_shape_drawable"
            android:text="@string/rob_a_store" />

        <Button
            android:id="@+id/labor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_action_bar_subtitle_text_size"
            android:background="@drawable/square_shape_drawable"
            android:text="@string/labor" />

        <Button
            android:id="@+id/do_favor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_action_bar_subtitle_text_size"
            android:background="@drawable/square_shape_drawable"
            android:text="@string/do_favor" />

        <Button
            android:id="@+id/buy_blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_action_bar_subtitle_text_size"
            android:background="@drawable/square_shape_drawable"
            android:text="@string/buy_blood" />

        <Button
            android:id="@+id/buy_guns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_action_bar_subtitle_text_size"
            android:background="@drawable/square_shape_drawable"
            android:text="@string/buy_guns" />

        <Button
            android:id="@+id/buy_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_action_bar_subtitle_text_size"
            android:background="@drawable/square_shape_drawable"
            android:text="@string/buy_cars" />

        <Button
            android:id="@+id/heist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_action_bar_subtitle_text_size"
            android:background="@drawable/square_shape_drawable"
            android:text="@string/heist" />
    </LinearLayout>

</ScrollView>